Wrong assert in phase_enum_2_phase_string() in referenceProcessorPhaseTimes.cpp

XMLWordPrintable

    • gc
    • b22

        in src/hotspot/share/gc/shared/referenceProcessorPhaseTimes.cpp:

        static const char* PhaseNames[ReferenceProcessor::RefPhaseMax] = {

        static const char* phase_enum_2_phase_string(ReferenceProcessor::RefProcPhases phase) {
          assert(phase >= ReferenceProcessor::RefPhase1 && phase <= ReferenceProcessor::RefPhaseMax,
                 "Invalid reference processing phase (%d)", phase);
          return PhaseNames[phase];
        }```

        Note the `<= ReferenceProcessor::RefPhaseMax`. Probably harmless, but parfait complains

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: