8206476: Wrong assert in phase_enum_2_phase_string() in referenceProcessorPhaseTimes.cpp

A less or equal than should be less than.

Reviewed-by: ehelin, kbarrett